@@ -70,7 +70,7 @@ function (assignment = NULL, hit = NULL, hit.type = NULL, return.all = TRUE,
         hitsearch <- SearchHITs(keypair = keypair, print = FALSE, 
 								log.requests = log.requests, sandbox = sandbox,
 								return.qual.dataframe = FALSE)
-        hitlist <- hitsearch$HITs[hitsearch$HITs$HITTypeId == hit.type, ]$HITId
+        hitlist <- hitsearch$HITs$HITId[hitsearch$HITs$HITTypeId %in% hit.type]
         if(length(hitlist) == 0) 
             stop("No HITs found for HITType")
         z <- data.frame(matrix(ncol = 3, nrow = length(hitlist)))
