@@ -1,6 +1,7 @@
 # CHANGES TO MTurkR 0.4 #
 
 ## SIGNIFICANT USER-VISIBLE CHANGES ##
+* Functions that accept a `hit.type` argument can now generally accept a vector of HITTypeIds rather than just a single character string. See documentation.
 * `GetBonuses` now allows requests to be opened in the default browser, like most other API functions.
 * From version 0.3.7, global options (`MTurkR.log`,`MTurkR.test`,`MTurkR.browser`,and `MTurkR.print`) have been added to all functions. Defaults for these remain the same in all places.
 * From version 0.3.65, `SearchHITs` returns a named list of QualificationRequirements. This is a consequence of some significant changes to now the names of user-defined QualificationTypes are added to this list (moving that functionality from `QualificationRequirementsToDataFrame` to `SearchHITs`.
